# turing-poker

./: README.md  chat_template.jinja  pyproject.toml  pyrightconfig.json
data/: fifteen_percent.json  fifteen_percent_summary.json  fifty_percent.json  fifty_percent_summary.json  nine_percent.json  nine_percent_summary.json  test_data.json  thirty_five_percent.json  thirty_five_percent_summary.json  twenty_five_percent.json  twenty_five_percent_summary.json  twenty_percent.json  twenty_percent_summary.json
logs/: run_37452.err  run_37452.out  run_37453.err  run_37453.out  run_37454.err  run_37454.out  run_37455.err  run_37455.out  run_37456.err  run_37456.out  run_37457.err  run_37457.out  run_37495.err  run_37496.err  run_37497.err  run_37498.err  run_37499.err  run_37501.err  run_37502.err  run_37503.err  run_37504.err  run_37505.err  run_37506.err  run_37507.err  run_37508.err
programs/: gepa_fifteen_percent.json  gepa_fifty_percent.json  gepa_nine_percent.json  gepa_thirty_five_percent.json  gepa_twenty_five_percent.json  gepa_twenty_percent.json
reports/: data_0037a0a8-e.json  data_1dbb289b-b.json  data_2d4535e6-8.json  data_4d34e08f-0.json  data_658b9832-a.json  data_6e932a65-5.json  data_99cd3005-2.json  data_c7860e2d-b.json  data_cbc8353e-6.json  data_d74aa74b-f.json  data_dcd03e4f-c.json  data_e867dd53-7.json
scripts/: counts.py  dspy_optimize.py  generate_data.py  run.sh  simulate_hands.sh
src/turing_holdem/: cli.py  dspy_modules.py  poker.py  utils.py
tests/: test_poker.py  test_pokerkit.py
